--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
     "build-dev:ssr": "npm run build-dev:client-and-server-bundles && npm run compile:server",
     "build:client-and-server-bundles": "ng build --prod && ng run my-blog:server:production --bundleDependencies none",
-    "build-dev:client-and-server-bundles": "ng build && ng run my-blog:server:production --bundleDependencies none"
+    "build-dev:client-and-server-bundles": "ng build && ng run my-blog:server:production --bundleDependencies none",
+    "start:ssr": "npm run build-dev:ssr && npm run serve:ssr"
   },
   "private": true,
   "dependencies": {
@@ -35,7 +36,6 @@
     "express": "^4.15.2",
     "firebase": "^6.3.4",
     "javascript-time-ago": "^2.0.1",
-    "jsdom": "^15.2.1",
     "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "textversionjs": "^1.1.3",
@@ -47,6 +47,7 @@
     "@angular/cli": "~8.2.0",
     "@angular/compiler-cli": "~8.2.0",
     "@angular/language-service": "~8.2.0",
+    "@types/express": "^4.17.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
