--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "express": "^4.15.2",
     "firebase": "^6.3.4",
+    "highlight.js": "^9.16.2",
     "javascript-time-ago": "^2.0.1",
+    "marked": "^0.7.0",
     "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "textversionjs": "^1.1.3",
@@ -49,8 +51,10 @@
     "@angular/compiler-cli": "~8.2.0",
     "@angular/language-service": "~8.2.0",
     "@types/express": "^4.17.2",
+    "@types/highlight.js": "^9.12.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/marked": "^0.7.2",
     "@types/node": "~8.9.4",
     "@types/textversionjs": "^1.1.0",
     "codelyzer": "^5.0.0",
