--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "firebase": "^6.3.4",
     "highlight.js": "^9.16.2",
     "javascript-time-ago": "^2.0.1",
-    "marked": "^0.7.0",
+    "markdown-it": "^10.0.0",
     "moment": "^2.24.0",
     "rxjs": "~6.4.0",
     "textversionjs": "^1.1.3",
@@ -54,6 +54,7 @@
     "@types/highlight.js": "^9.12.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/markdown-it": "0.0.9",
     "@types/marked": "^0.7.2",
     "@types/node": "~8.9.4",
     "@types/textversionjs": "^1.1.0",
