--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nguniversal/common": "^8.1.1",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "compression": "^1.7.4",
     "express": "^4.15.2",
     "firebase": "^6.3.4",
     "highlight.js": "^9.16.2",
@@ -48,6 +49,7 @@
     "@angular/cli": "~8.2.0",
     "@angular/compiler-cli": "~8.2.0",
     "@angular/language-service": "~8.2.0",
+    "@types/compression": "^1.0.1",
     "@types/express": "^4.17.2",
     "@types/highlight.js": "^9.12.3",
     "@types/jasmine": "~3.3.8",
